# poetry-snakemake-plugin

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  test.yml
poetry_snakemake_plugin/: __init__.py  common.py  executor_plugins.py  report_plugins.py  software_deployment_plugins.py  storage_plugins.py
poetry_snakemake_plugin/templates/: ci.yml.j2  init.py  init.py.j2  release_please.yml.j2  tests.py.j2
poetry_snakemake_plugin/templates/executor-plugins/: init.py  tests.py.j2
poetry_snakemake_plugin/templates/report-plugins/: init.py  tests.py
poetry_snakemake_plugin/templates/software-deployment-plugins/: init.py  tests.py
poetry_snakemake_plugin/templates/storage-plugins/: init.py  tests,py  tests.py
tests/: tests.py
