[tool.poetry]
name = "poetry-snakemake-plugin"
version = "0.3.2"
description = "A plugin for poetry that adds Snakemake-specific functionality."
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
poetry = "^1.2"
cleo = "^2.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.0"

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."poetry.application.plugin"]
scaffold-snakemake-executor-plugin = "poetry_snakemake_plugin:ScaffoldSnakemakeExecutorPlugin"