[tool.poetry]
name = "poetry-snakemake-plugin"
version = "0.7.2"
description = "A plugin for poetry that adds Snakemake-specific functionality."
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
poetry = "^2.0"
cleo = "^2.0.1"
jinja2 = "^3.1.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
coverage = "^7.3.0"
ruff = "^0.9.9"

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."poetry.application.plugin"]
scaffold-snakemake-plugin = "poetry_snakemake_plugin:ScaffoldSnakemakeExecutorPlugin"